[package]
name = "telemetry_overlay"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.34.1"
eframe = { version = "0.34.1" }
log = "0.4.27"
flume = "0.11"
futures = "0.3.32"
futures-util = "0.3.32"
env_logger = "0.11.8"
egui_plot = "0.35.0"

[dependencies.compio]
version = "0.18"
features = ["macros", "runtime", "time"]

[dependencies.windows]
version = "0.62"
features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_Security",
]

[profile.dev.package."*"]
opt-level = 2
